# img-hasher

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  .yarnrc.yml  Cargo.toml  index.d.ts  index.js  package.json  readme.md  rustfmt.toml
.github/: .renovate.json
.github/workflows/: CI.yml  continuous-integration.yml
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: fetch_buffer.rs  hash_algo.rs  lib.rs
