[package]
edition = "2021"
name = "imranbarbhuiya_img-hasher"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14.1", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.14.3"
image_hasher = "1.2.0"
image = "0.24.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.35.0", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9.97", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.97", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.97", features = ["vendored"] }


[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
