[package]
edition = "2021"
name = "imranbarbhuiya_img-hasher"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.16.0"
image_hasher = "1.2.0"
image = "0.24.9"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9.101", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.101", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.101", features = ["vendored"] }


[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
