[package]
edition = "2021"
name = "imranbarbhuiya_img-hasher"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.4", default-features = false, features = [
    "napi4",
    "async",
] }
napi-derive = "2.16.3"
image_hasher = "2.0.0"
image = "0.25.1"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.102", features = ["vendored"] }


[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
